# PCFL

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-test.yml  ci.yml  test-ubuntu.yml  test-windows.yml  test.yml
pcfl/: __init__.py  __main__.py  exceptions.py  func.py  interface.py  interfaces.py  validator.py
pcfl/core/: __init__.py  algorithm.py  exceptions.py  output.py  parser.py
tests/: test_by_midi_file.py
tests/assets/: error.mid  mido-practice.mid
