[tool.poetry]
name = "pcfl"
version = "0.1.0"
description = "Pinao Compensator for FLstudio"
authors = ["recoma <seokbong60@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mido = "^1.3.0"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
